--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
         </div>
         <div class="container-2">
         <div class="receipes">
-            <img class="receipes__img" src="C:\Users\rajes\OneDrive\Desktop\FSD\CSS\food order\image\Schezwan-Noodles_.jpg" alt="Schezwan Noodles" >
+            <img class="receipes__img" src="image\Schezwan-Noodles_.jpg" alt="Schezwan Noodles" >
             <h4 class="receipes__title">Schezwan Noodles</h4>
             <p class="receipes__des">Something which is very delicious</p>
             <button class="receipes__button">Order now</button>
             </div>
         <div class="receipes">
-            <img class="receipes__img" src="C:\Users\rajes\OneDrive\Desktop\FSD\CSS\food order\image\honey_chicken_.jpg" alt="Honey chicken">
+            <img class="receipes__img" src="image\honey_chicken_.jpg" alt="Honey chicken">
              <h4 class="receipes__title">Honey Chicken</h4>
              <p class="receipes__des">Something which is very delicious</p>
               <button class="receipes__button">Order now</button>
             </div>
             <div class="receipes">
-            <img class="receipes__img" src="C:\Users\rajes\OneDrive\Desktop\FSD\CSS\food order\image\momos.jpg" alt="Momos">
+            <img class="receipes__img" src="image\momos.jpg" alt="Momos">
              <h4 class="receipes__title">Chicken Momos</h4>
              <p class="receipes__des">Something which is very delicious</p>
               <button class="receipes__button">Order now</button>
             </div>
             <div class="receipes">
-            <img class="receipes__img" src="C:\Users\rajes\OneDrive\Desktop\FSD\CSS\food order\image\veg-schezwan-fried-rice.jpg">
+            <img class="receipes__img" src="image\veg-schezwan-fried-rice.jpg">
              <h4 class="receipes__title">schezwan Friedrice</h4>
              <p class="receipes__des">Something which is very delicious</p>
               <button class="receipes__button">Order now</button>
